# bot

./: Cargo.toml  config.json  readme
src/: config.rs  main.rs
src/spot/: base.rs  mod.rs
src/usd_futures/: base.rs  local_spawner.rs  mod.rs
