[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"]}
binance_spot_connector_rust = { version = "1.1.0", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
rust_decimal = "1.24.0"
rust_decimal_macros = "1.24.0"

hyper-tls = {version = "0.5.0" }
